--- a/style.css
+++ b/style.css
@@ -1,31 +1,98 @@
-:root{
-    color-scheme: dark;
+:root {
+    background-color: #1f1f1f;
+    color: #d3d3d3;
+    font-family: sans-serif;
 }
 
-h1{
+h1,
+h2 {
     text-align: center;
 }
 
-#questionaire{
+#questionaire {
 
     display: flex;
     align-items: center;
     flex-direction: column;
     gap: 1rem;
 
-    & button{
+    & button {
         padding: 0.5rem;
     }
 }
 
-#players{
+#players {
     display: flex;
     gap: 4rem
 }
 
-h3 + input{
+h3+input {
     border-radius: 0.5rem;
     border: none;
     padding: 0.5rem;
 }
 
+
+#tictactoe-container {
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    width: 30svw;
+    height: 30svh;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 1rem;
+
+    >.box {
+        background-color: rgb(28, 143, 133);
+        display: flex;
+        font-size: 3rem;
+        align-items: center;
+        justify-content: center;
+        border-radius: 1rem;
+        cursor: pointer;
+        color: white;
+    }
+}
+
+main {
+    display: none;
+
+    >button {
+        display: none;
+        margin: auto;
+        padding: 1.5rem 2rem;
+        border: none;
+        border-radius: 1rem;
+        background-color: rgb(28, 143, 133);
+        color: white;
+        font-weight: bolder;
+    }
+
+    >h1 {
+        display: none;
+    }
+
+    >div:nth-child(2) {
+        display: flex;
+        justify-content: center;
+        gap: 2.5rem;
+        margin-top: 2rem;
+
+        >div {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            >p {
+                background-color: rgb(28, 143, 133);
+                font-size: 2rem;
+                padding: 1.5rem 2rem;
+                border-radius: 1rem;
+                margin-top: 0;
+                color: white;
+
+            }
+        }
+    }
+}
