--- a/style.css
+++ b/style.css
@@ -4,25 +4,44 @@
     font-family: sans-serif;
 }
 
+h1 {
+    font-size: 3rem;
+}
+
 h1,
 h2 {
     text-align: center;
 }
 
 #questionaire {
-
+    height: 80svh;
     display: flex;
-    align-items: center;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 1rem;
 
     & button {
         padding: 0.5rem;
+        border-radius: 0.5rem;
+        background-color: rgb(19, 192, 178);
+        color: #ffffff;
+        margin-top: 1rem;
+        padding: 1rem 2rem;
+        border: none;
+        outline: none;
+        font-weight: bold;
+    }
+
+    & button:hover {
+        background-color: rgb(28, 143, 133);
+        cursor: pointer;
     }
 }
 
 #players {
     display: flex;
+
     gap: 4rem
 }
 
@@ -37,19 +56,20 @@ h3+input {
     margin-left: auto;
     margin-right: auto;
     display: grid;
-    width: 30svw;
-    height: 30svh;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    width: 40svh;
+    height: 40svh;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     gap: 1rem;
 
     >.box {
+        box-sizing: border-box;
         background-color: rgb(28, 143, 133);
         display: flex;
-        font-size: 3rem;
+        font-size: 3.5rem;
         align-items: center;
         justify-content: center;
-        border-radius: 1rem;
+        border-radius: 0.5rem;
         cursor: pointer;
         color: white;
     }
